--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.1",
+    "nuxt": "3.0.0-rc.3",
     "fibers": "^5.0.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0"
   },
   "dependencies": {
-    "firebase": "^9.7.0",
-    "firebase-admin": "^10.1.0",
     "@jobinsjp/vue3-datatable": "^1.0.15",
-    "@vueform/multiselect": "^2.3.3",
-    "@vuepic/vue-datepicker": "^3.2.0",
+    "@vueform/multiselect": "^2.3.4",
+    "@vuepic/vue-datepicker": "^3.2.1",
     "click-outside-vue3": "^4.0.1",
+    "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "formidable": "^3.2.1",
-    "imagemagick": "^0.1.3",
     "lightgallery": "^2.4.0",
     "moment": "^2.29.3",
+    "sharp": "^0.30.4",
     "slugify": "^1.6.5",
     "vanilla-back-to-top": "^7.2.1",
     "vue-responsive-video-background-player": "^2.2.1",
